--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -12,4 +12,14 @@
         <item name="android:navigationBarColor">@color/primary_dark</item>
     </style>
 
+    <style name="PrefTheme" parent="Theme.AppCompat.Light">
+
+        <!-- Main theme colors -->
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+
+        <item name="android:navigationBarColor">@color/primary_dark</item>
+    </style>
+
 </resources>
