--- a/app/src/main/res/layout/fragment_solver.xml
+++ b/app/src/main/res/layout/fragment_solver.xml
@@ -1,12 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              android:weightSum="1"
-              tools:context=".MainFragment">
+              android:weightSum="1">
 
-    <ImageView
+<ImageView
         android:id="@+id/imageViewCaptcha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
