Preferences: Uncomment notification and sound checkboxes

--- a/app/src/main/res/xml/pref_notification.xml
+++ b/app/src/main/res/xml/pref_notification.xml
@@ -18,20 +18,20 @@
 
     <PreferenceCategory android:title="Notification Settings">
 
-        <CheckBoxPreference
+        <!-- CheckBoxPreference
             android:contentDescription="@string/pref_notification_description"
             android:key="pref_notification"
-            android:title="@string/pref_notification_title"/>
+            android:title="@string/pref_notification_title"/-->
 
         <CheckBoxPreference
             android:contentDescription="@string/pref_notification_vibrate_description"
             android:key="pref_notification_vibrate"
             android:title="@string/pref_notification_vibrate_title"/>
 
-        <CheckBoxPreference
+        <!--CheckBoxPreference
             android:contentDescription="@string/pref_notification_sound_description"
             android:key="pref_notification_sound"
-            android:title="@string/pref_notification_sound_title"/>
+            android:title="@string/pref_notification_sound_title"/-->
 
     </PreferenceCategory>
 
