--- a/app/src/main/res/layout/fragment_confirm.xml
+++ b/app/src/main/res/layout/fragment_confirm.xml
@@ -27,8 +27,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:maxWidth="200dp"
-        android:minHeight="150dp"/>
+        android:minHeight="150dp"
+        android:maxWidth="200dp" />
 
     <ProgressBar
         android:id="@+id/progressBar"
