SettingsFragment: Increase selectable ImageView size

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -19,14 +19,14 @@
 
     <string-array name="array_style_size">
         <item>Small: 150dp</item>
-        <item>Medium: 200dp</item>
-        <item>Large: 250dp</item>
+        <item>Medium: 220dp</item>
+        <item>Large: 300dp</item>
     </string-array>
 
-    <integer-array name="array_style_size_value">
+    <string-array name="array_style_size_value">
         <item>150</item>
-        <item>200</item>
-        <item>250</item>
-    </integer-array>
+        <item>220</item>
+        <item>300</item>
+    </string-array>
 
 </resources>
