--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,7 @@
     </style>
     
     <style name="TabTheme">
+        <item name="android:textSize">@dimen/abc_text_size_medium_material</item>
         <item name="android:background">@color/primary</item>
         <item name="android:textColor">@color/icons</item>
         <item name="android:layout_gravity">top</item>
