Project: Code reformat and cleanup

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,11 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
@@ -28,9 +28,9 @@
 
         <android.support.v4.view.PagerTabStrip
             android:id="@+id/pager_tab_strip"
+            style="@style/TabTheme"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/TabTheme" />
+            android:layout_height="wrap_content" />
 
     </android.support.v4.view.ViewPager>
 
