--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2015 Lukas "dotwee" Wolfsteiner
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -25,7 +24,7 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
     </style>
-    
+
     <style name="TabTheme">
         <item name="android:textSize">@dimen/abc_text_size_medium_material</item>
         <item name="android:background">@color/primary</item>
