--- a/app/src/main/res/xml/pref_automation.xml
+++ b/app/src/main/res/xml/pref_automation.xml
@@ -23,7 +23,12 @@
             android:key="pref_automation_loop"
             android:title="@string/pref_automation_loop_title" />
 
-        <!-- Todo seconds -->
+        <ListPreference
+            android:contentDescription="@string/pref_automation_loop_time_description"
+            android:entries="@array/array_loop_time"
+            android:entryValues="@array/array_loop_time_value"
+            android:key="pref_automation_loop_time"
+            android:title="@string/pref_automation_loop_time_title"/>
 
     </PreferenceCategory>
 
