--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,8 +30,7 @@
         <item name="android:background">@color/primary</item>
         <item name="android:textColor">@color/icons</item>
         <item name="android:layout_gravity">top</item>
-        <item name="android:paddingBottom">5dp</item>
-        <item name="android:paddingTop">5dp</item>
+        <item name="android:padding">7dp</item>
     </style>
 
 </resources>
