--- a/app/src/main/res/layout/fragment_solver.xml
+++ b/app/src/main/res/layout/fragment_solver.xml
@@ -18,8 +18,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="16dp"
+              android:paddingLeft="16dp"
     android:paddingRight="16dp"
+    android:paddingTop="16dp"
     android:weightSum="1">
 
     <ImageView
