--- a/app/src/main/res/layout/fragment_solver.xml
+++ b/app/src/main/res/layout/fragment_solver.xml
@@ -96,15 +96,16 @@
 
         <TextView
             android:id="@+id/textViewID"
-            style="@style/DescTheme"
+            style="@style/DescTheme.Count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
-            android:layout_row="0"/>
+            android:layout_row="0"
+            />
 
         <TextView
             android:id="@+id/textViewBA"
-            style="@style/DescTheme"
+            style="@style/DescTheme.Count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
