--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,7 @@
         <!-- Main theme colors -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="android:progressBarStyle">@color/accent</item>
         <item name="colorAccent">@color/accent</item>
     </style>
 
@@ -35,11 +36,14 @@
 
     <style name="DescTheme">
         <item name="android:textSize">@dimen/abc_text_size_medium_material</item>
+        <item name="android:gravity">center_vertical</item>
         <item name="android:paddingLeft">4dp</item>
     </style>
 
     <style name="DescTheme.Count" parent="DescTheme">
         <item name="android:textColor">@color/accent</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
 </resources>
