--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -17,17 +17,19 @@
 <resources>
 
     <string-array name="array_style_size">
-        <item>Small: 150dp</item>
-        <item>Medium: 220dp</item>
-        <item>Large: 300dp</item>
-        <item>xLarge: 350dp</item>
+        <item>very small: 150dp</item>
+        <item>small: 220dp</item>
+        <item>medium: 300dp</item>
+        <item>large: 340dp</item>
+        <item>very large: 400dp</item>
     </string-array>
 
     <string-array name="array_style_size_value">
         <item>150</item>
         <item>220</item>
         <item>300</item>
-        <item>350</item>
+        <item>340</item>
+        <item>400</item>
     </string-array>
 
     <string-array name="array_loop_time">
