--- a/app/src/main/res/xml/pref_automation.xml
+++ b/app/src/main/res/xml/pref_automation.xml
@@ -31,6 +31,12 @@
             android:key="pref_automation_loop_time"
             android:title="@string/pref_automation_loop_time_title"/>
 
+        <SwitchPreference
+            android:contentDescription="@string/pref_automation_balance_description"
+            android:defaultValue="false"
+            android:key="pref_automation_balance"
+            android:title="@string/pref_automation_balance_title" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
