Preferences: Add a setting to enable/disable the current CaptchaID TextView

--- a/app/src/main/res/xml/pref_style.xml
+++ b/app/src/main/res/xml/pref_style.xml
@@ -30,5 +30,10 @@
             android:key="pref_layout_confirm"
             android:title="Confirm-Solver" />
 
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="pref_layout_captchaid"
+            android:title="Display current CaptchaID"/>
+
     </PreferenceCategory>
 </PreferenceScreen>
