--- a/app/src/main/res/xml/pref_notification.xml
+++ b/app/src/main/res/xml/pref_notification.xml
@@ -29,10 +29,10 @@
             android:key="pref_notification_vibrate"
             android:title="@string/pref_notification_vibrate_title" />
 
-        <!--SwitchPreference
+        <SwitchPreference
             android:contentDescription="@string/pref_notification_sound_description"
             android:key="pref_notification_sound"
-            android:title="@string/pref_notification_sound_title"/-->
+            android:title="@string/pref_notification_sound_title"/>
 
     </PreferenceCategory>
 
