--- a/app/src/main/res/xml/pref_automation.xml
+++ b/app/src/main/res/xml/pref_automation.xml
@@ -20,7 +20,7 @@
     <PreferenceCategory android:title="Automation Settings">
         <SwitchPreference
             android:contentDescription="@string/pref_automation_loop_description"
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:key="pref_automation_loop"
             android:title="@string/pref_automation_loop_title" />
 
