--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,13 +18,17 @@
 <resources>
 
     <!-- inherit from the material theme -->
-    <style name="AppTheme" parent="Theme.AppCompat">
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
 
         <!-- Main theme colors -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="android:progressBarStyle">@color/accent</item>
         <item name="colorAccent">@color/accent</item>
+    </style>
+
+    <style name="ToolbarTheme" parent="AppTheme">
+        <item name="android:background">@color/primary</item>
     </style>
 
     <style name="TabTheme">
