Preferences: Add 'About' category

--- a/app/src/main/res/xml/pref_api.xml
+++ b/app/src/main/res/xml/pref_api.xml
@@ -23,15 +23,15 @@
             android:key="pref_api_key"
             android:title="@string/pref_api_key_title" />
 
-        <SwitchPreference
-            android:contentDescription="@string/pref_api_selfonly_description"
-            android:key="pref_api_selfonly"
-            android:title="@string/pref_api_selfonly_title" />
-
-        <SwitchPreference
+        <CheckBoxPreference
             android:contentDescription="@string/pref_api_debug_description"
             android:key="pref_api_debug"
             android:title="@string/pref_api_debug_title" />
+
+        <CheckBoxPreference
+            android:contentDescription="@string/pref_api_selfonly_description"
+            android:key="pref_api_selfonly"
+            android:title="@string/pref_api_selfonly_title"/>
 
     </PreferenceCategory>
 </PreferenceScreen>
