Preferences: Display current CaptchaID by default

--- a/app/src/main/res/xml/pref_style.xml
+++ b/app/src/main/res/xml/pref_style.xml
@@ -25,7 +25,7 @@
             android:title="Image Size" />
 
         <SwitchPreference
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:key="pref_layout_captchaid"
             android:title="Display current CaptchaID"/>
 
