--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,13 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <include layout="@layout/activity_main_toolbar"/>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_main"
+        style="@style/ToolbarTheme"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
