--- a/app/src/main/res/layout-sw600dp/fragment_solver.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_solver.xml
@@ -19,7 +19,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="17dp">
+    >
 
     <ImageView
         android:id="@+id/imageView"
@@ -31,24 +31,14 @@
         android:minHeight="340dp"
         android:minWidth="340dp"/>
 
-    <ProgressBar
-        android:id="@+id/progressBar2"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/imageView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/imageView"
-        android:layout_below="@+id/imageView"/>
-
     <TableLayout
         android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/imageView"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:layout_gravity="center_horizontal"
-        android:layout_toEndOf="@+id/imageView"
         android:layout_toRightOf="@+id/imageView"
         android:stretchColumns="1">
 
@@ -67,6 +57,12 @@
         </TableRow>
 
         <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </TableRow>
+
+        <TableRow
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
@@ -77,6 +73,20 @@
                 android:layout_column="0"
                 android:text="@string/main_button_text_start"/>
 
+            <ProgressBar
+                android:id="@+id/progressBar2"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_column="1"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="5dp"
+                android:layout_toEndOf="@+id/imageView"
+                android:layout_toRightOf="@+id/imageView"/>
+
             <Button
                 android:id="@+id/buttonSend"
                 android:layout_width="wrap_content"
@@ -86,11 +96,6 @@
 
         </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </TableRow>
     </TableLayout>
 
     <GridLayout
