--- a/app/src/main/res/layout-sw600dp/fragment_solver.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_solver.xml
@@ -22,12 +22,13 @@
     >
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewCaptcha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_margin="5dp"
         android:minHeight="340dp"
         android:minWidth="340dp"/>
 
@@ -39,7 +40,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_gravity="center_horizontal"
-        android:layout_toRightOf="@+id/imageView"
+        android:layout_toRightOf="@+id/imageViewCaptcha"
         android:stretchColumns="1">
 
         <TableRow
@@ -74,7 +75,7 @@
                 android:text="@string/main_button_text_start"/>
 
             <ProgressBar
-                android:id="@+id/progressBar2"
+                android:id="@+id/progressBar"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -84,8 +85,8 @@
                 android:layout_column="1"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="5dp"
-                android:layout_toEndOf="@+id/imageView"
-                android:layout_toRightOf="@+id/imageView"/>
+                android:layout_toEndOf="@+id/imageViewCaptcha"
+                android:layout_toRightOf="@+id/imageViewCaptcha"/>
 
             <Button
                 android:id="@+id/buttonSend"
@@ -106,8 +107,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tableLayout"
-        android:layout_toEndOf="@+id/imageView"
-        android:layout_toRightOf="@+id/imageView">
+        android:layout_toEndOf="@+id/imageViewCaptcha"
+        android:layout_toRightOf="@+id/imageViewCaptcha">
 
         <TextView
             android:id="@+id/textViewDescID"
@@ -116,7 +117,8 @@
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_row="0"
-            android:text="@string/main_textview_text_captcha"/>
+            android:text="@string/main_textview_text_captcha"
+            />
 
         <TextView
             android:id="@+id/textViewDescBA"
