Layout: Landscape layout for phones

--- a/app/src/main/res/values-normal-land/attrs.xml
+++ b/app/src/main/res/values-normal-land/attrs.xml
@@ -18,5 +18,5 @@
 
 <resources>
     <bool name="isTablet">false</bool>
-    <bool name="isLandscape">false</bool>
+    <bool name="isLandscape">true</bool>
 </resources>
