--- a/app/src/main/res/layout-normal-land/fragment_solver.xml
+++ b/app/src/main/res/layout-normal-land/fragment_solver.xml
@@ -19,21 +19,16 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-    >
+                android:padding="7dp">
 
     <ImageView
         android:id="@+id/imageViewCaptcha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
-        android:minHeight="340dp"
-        android:minWidth="340dp"/>
+        android:minWidth="320dp"/>
 
     <TableLayout
         android:id="@+id/tableLayout"
