--- a/app/src/main/res/layout/fragment_solver.xml
+++ b/app/src/main/res/layout/fragment_solver.xml
@@ -61,7 +61,8 @@
                 android:layout_height="wrap_content"
                 android:layout_column="1"
                 android:hint="@string/main_edittext_hint_answer"
-                android:inputType="textVisiblePassword" />
+                android:inputType="textVisiblePassword"
+                android:singleLine="true"/>
 
             <Button
                 android:id="@+id/buttonSend"
@@ -102,7 +103,7 @@
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_row="0"
-            />
+            android:singleLine="false"/>
 
         <TextView
             android:id="@+id/textViewBA"
