--- a/app/src/main/res/layout-sw600dp/fragment_solver.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_solver.xml
@@ -16,142 +16,23 @@
   ~
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-    >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:padding="7dp">
 
-    <ImageView
-        android:id="@+id/imageViewCaptcha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="5dp"
-        android:contentDescription="Captcha"
-        android:minHeight="340dp"
-        android:minWidth="340dp"/>
-
-    <TableLayout
-        android:id="@+id/tableLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_toRightOf="@+id/imageViewCaptcha"
-        android:stretchColumns="1">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <EditText
-                android:id="@+id/editTextAnswer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_span="3"
-                android:hint="@string/main_edittext_hint_answer"
-                android:inputType="textVisiblePassword"
-                android:singleLine="true"/>
-        </TableRow>
-
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-            <Button
-                android:id="@+id/buttonPull"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:text="@string/main_button_text_start"/>
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:layout_column="1"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="5dp"
-                android:layout_toEndOf="@+id/imageViewCaptcha"
-                android:layout_toRightOf="@+id/imageViewCaptcha"/>
-
-            <Button
-                android:id="@+id/buttonSend"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:text="@string/main_button_text_send"/>
-
-        </TableRow>
-
-    </TableLayout>
-
-    <GridLayout
-        android:id="@+id/gridLayout"
-        android:layout_width="match_parent"
+    <include
+        android:id="@+id/includeCaptcha"
+        layout="@layout/frame_captcha"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/tableLayout"
-        android:layout_toEndOf="@+id/imageViewCaptcha"
-        android:layout_toRightOf="@+id/imageViewCaptcha">
+        android:layout_weight="0.4"/>
 
-        <TextView
-            android:id="@+id/textViewDescID"
-            style="@style/DescTheme"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_row="0"
-            android:text="@string/main_textview_text_captcha"
-            />
+    <include
+        android:id="@+id/includeSolver"
+        layout="@layout/frame_solver"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.3"/>
 
-        <TextView
-            android:id="@+id/textViewDescBA"
-            style="@style/DescTheme"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_row="1"
-            android:text="@string/main_textview_text_balance"/>
-
-        <Button
-            android:id="@+id/buttonSkip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_row="0"
-            android:layout_rowSpan="2"
-            android:text="@string/main_button_text_skip"/>
-
-        <TextView
-            android:id="@+id/textViewID"
-            style="@style/DescTheme.Count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="2"
-            android:layout_marginLeft="5dp"
-            android:layout_row="0"
-            />
-
-        <TextView
-            android:id="@+id/textViewBA"
-            style="@style/DescTheme.Count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="2"
-            android:layout_marginLeft="5dp"
-            android:layout_row="1"/>
-    </GridLayout>
-
-</RelativeLayout>
+</LinearLayout>
