--- a/app/src/main/res/menu/menu_global.xml
+++ b/app/src/main/res/menu/menu_global.xml
@@ -17,12 +17,10 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+    >
 
     <item
         android:id="@+id/menu_exit"
-        android:icon="@drawable/ic_close_circle_outline_white_36dp"
-        android:title="Exit"
-        app:showAsAction="always"/>
+        android:title="Exit"/>
 
 </menu>
