--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,12 +16,14 @@
   -->
 
 <resources>
-    <color name="primary">#9C27B0</color>
-    <color name="primary_dark">#7B1FA2</color>
-    <color name="primary_light">#E1BEE7</color>
+    <color name="primary">#4CAF50</color>
+    <color name="primary_dark">#388E3C</color>
+    <color name="primary_light">#C8E6C9</color>
+
 
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
-    <color name="accent">#009688</color>
+
+    <color name="accent">#9C27B0</color>
     <color name="icons">#FFFFFF</color>
 </resources>
